# sublime-sema

./: .gitattributes  .gitignore  Comments.tmPreferences  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Default (Windows).sublime-keymap  Default.sublime-commands  Example.sublime-keymap  Main.sublime-menu  README.md  Sema.sublime-build  Sema.sublime-settings  Sema.sublime-syntax  Symbol List.tmPreferences  pyproject.toml  sema-lsp.sublime-settings  sema_eval.py  sema_lsp.py
.github/workflows/: ci.yml  release.yml  syntax-tests.yml
docs/superpowers/plans/: 2026-07-21-sema-eval-lsp.md
docs/superpowers/specs/: 2026-07-21-eval-and-lsp-design.md
tests/: syntax_test_huffman.sema  syntax_test_sema.sema  test_eval_command.py  test_eval_helpers_extended.py  test_package_contract.py  test_settings_discovery.py
